--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,13 @@
 @import "tailwindcss";
+@tailwind utilities;
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #ff622c;
+  --secondary: #a4b476;
+  --accent: #797979;
+  --negative: #ff3a2c;
 }
 
 @theme inline {
@@ -14,8 +19,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #1f1f1f;
     --foreground: #ededed;
+    --accent: #cecece;
   }
 }
 
@@ -23,4 +29,29 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@theme {
+  --color-primary: var(--primary);
+  --color-secondary: var(--secondary);
+  --color-accent: var(--accent);
+  --color-negative: var(--negative);
+}
+
+h1,
+h2 {
+  @apply text-primary;
+}
+
+h1 {
+  @apply text-2xl;
+}
+h2 {
+  @apply text-xl;
+}
+
+@layer utilities {
+  .page {
+    @apply relative m-auto w-full px-4 md:max-w-[1024px] lg:px-0;
+  }
 }
